--- a/jenkins-jcasc.yml
+++ b/jenkins-jcasc.yml
@@ -1,5 +1,6 @@
 jenkins:
   systemMessage: "Jenkins + Keycloak OIDC + RBAC"
+
   securityRealm:
     oic:
       clientId: "jenkins"
@@ -13,16 +14,17 @@ jenkins:
 
   authorizationStrategy:
     roleBased:
-      globalRoles:
-        - name: "admin"
-          description: "Admins have full control"
-          permissions:
-            - "Overall/Administer"
-          assignments:
-            - "Jenkins-admin"
-        - name: "read-only"
-          description: "Read-only users"
-          permissions:
-            - "Overall/Read"
-          assignments:
-            - "Jenkins-read-only"
+      roles:
+        global:
+          - name: "admin"
+            description: "Admins have full control"
+            permissions:
+              - "Overall/Administer"
+            assignments:
+              - "Jenkins-admin"
+          - name: "read-only"
+            description: "Read-only users"
+            permissions:
+              - "Overall/Read"
+            assignments:
+              - "Jenkins-read-only"
