--- a/jenkins-jcasc.yml
+++ b/jenkins-jcasc.yml
@@ -1,30 +1,21 @@
 jenkins:
+  systemMessage: "Jenkins with OIDC + Matrix Authorization"
+
   securityRealm:
     oic:
       clientId: "jenkins"
       clientSecret: "${OIDC_CLIENT_SECRET}"
       wellKnownOpenIDConfigurationUrl: "http://172.31.92.192/realms/jenkins/.well-known/openid-configuration"
-      userNameField: "preferred_username"
-      groupsFieldName: "groups"
       logoutFromOpenidProvider: true
       disableSslVerification: true
       escapeHatchEnabled: true
+      userNameField: "preferred_username"
+      groupsFieldName: "groups"
 
   authorizationStrategy:
-    roleBased:
-      roles:
-        global:
-          - name: "admin"
-            description: "Jenkins Admin"
-            pattern: ".*"
-            permissions:
-              - "Overall/Administer"
-            assignedGroups:
-              - "Jenkins-admin"
-          - name: "readonly"
-            description: "Read-only users"
-            pattern: ".*"
-            permissions:
-              - "Overall/Read"
-            assignedGroups:
-              - "Jenkins-read-only"
+    globalMatrix:
+      permissions:
+        - "Overall/Administer:authenticated"
+        - "Overall/Read:authenticated"
+        - "Job/Build:authenticated"
+        - "Job/Read:authenticated"
