--- a/jenkins-jcasc.yml
+++ b/jenkins-jcasc.yml
@@ -1,11 +1,16 @@
 jenkins:
-  systemMessage: "Jenkins with OIDC + Matrix Auth"
+  systemMessage: "Jenkins with OIDC + Matrix Auth - final working version"
 
   securityRealm:
     oic:
       clientId: "jenkins"
       clientSecret: "${OIDC_CLIENT_SECRET}"
-      wellKnownOpenIDConfigurationUrl: "http://172.31.92.192/realms/jenkins/.well-known/openid-configuration"
+      serverConfiguration:
+        name: "Keycloak"
+        authorizationEndpoint: "http://172.31.92.192/realms/jenkins/protocol/openid-connect/auth"
+        tokenEndpoint: "http://172.31.92.192/realms/jenkins/protocol/openid-connect/token"
+        userInfoEndpoint: "http://172.31.92.192/realms/jenkins/protocol/openid-connect/userinfo"
+        jwksUri: "http://172.31.92.192/realms/jenkins/protocol/openid-connect/certs"
       logoutFromOpenidProvider: true
       disableSslVerification: true
       escapeHatchEnabled: true
