--- a/jenkins-jcasc.yml
+++ b/jenkins-jcasc.yml
@@ -1,18 +1,11 @@
 jenkins:
-  systemMessage: "OIDC + Matrix Auth FINAL ✅"
+  systemMessage: "Jenkins + Keycloak OIDC + RBAC via JCasC"
 
   securityRealm:
     oic:
       clientId: "jenkins"
-      clientSecret: "${OIDC_CLIENT_SECRET}"
-
-      serverConfiguration:
-        manual:
-          authorizationEndpoint: "http://172.31.92.192/realms/jenkins/protocol/openid-connect/auth"
-          tokenEndpoint: "http://172.31.92.192/realms/jenkins/protocol/openid-connect/token"
-          userInfoEndpoint: "http://172.31.92.192/realms/jenkins/protocol/openid-connect/userinfo"
-          jwksUri: "http://172.31.92.192/realms/jenkins/protocol/openid-connect/certs"
-
+      clientSecret: "sTYTUeuGu1yr6aqPlCvPlCKzKGle3D6Q"
+      wellKnownOpenIDConfigurationUrl: "http://192.168.1.8:32001/realms/jenkins/.well-known/openid-configuration"
       logoutFromOpenidProvider: true
       disableSslVerification: true
       escapeHatchEnabled: true
@@ -20,13 +13,18 @@ jenkins:
       groupsFieldName: "groups"
 
   authorizationStrategy:
-    projectMatrix:
-      entries:
-        - group:
-            name: authenticated
+    roleBased:
+      roles:
+        global:
+          - name: "admin"
+            description: "Admins can do anything"
             permissions:
-              - Overall/Read
-              - Overall/Administer
-              - Job/Build
-              - Job/Configure
-              - Job/Read
+              - "Overall/Administer"
+            assignments:
+              - "alice"
+          - name: "readonly"
+            description: "Read-only users"
+            permissions:
+              - "Overall/Read"
+            assignments:
+              - "bob"
