--- a/jenkins-jcasc.yml
+++ b/jenkins-jcasc.yml
@@ -17,7 +17,7 @@ jenkins:
               - "bob"
 
   securityRealm:
-    oidc:  # Changed to 'oidc' which is the most common key
+    openidConnect:
       clientId: "jenkins"
       clientSecret: "sTYTUeuGu1yr6aqPlCvPlCKzKGle3D6Q"
       wellKnownOpenIDConfigurationUrl: "http://192.168.1.8:32001/realms/jenkins/.well-known/openid-configuration"
@@ -79,16 +79,16 @@ jenkins:
   myViewsTabBar: "standard"
 
   nodeMonitors:
-    - architecture: {}
-    - clock: {}
+    - "architecture"
+    - "clock"
     - diskSpace:
         freeSpaceThreshold: "1GiB"
         freeSpaceWarningThreshold: "2GiB"
-    - swapSpace: {}
+    - "swapSpace"
     - tmpSpace:
         freeSpaceThreshold: "1GiB"
         freeSpaceWarningThreshold: "2GiB"
-    - responseTime: {}
+    - "responseTime"
 
   numExecutors: 0
 
@@ -116,60 +116,61 @@ jenkins:
 
   viewsTabBar: "standard"
 
-globalCredentialsConfiguration:
-  configuration:
-    providerFilter: "none"
-    typeFilter: "none"
+  # These sections were moved under 'jenkins'
+  globalCredentialsConfiguration:
+    configuration:
+      providerFilter: "none"
+      typeFilter: "none"
 
-appearance:
-  prism:
-    theme: PRISM
+  appearance:
+    prism:
+      theme: PRISM
 
-security:
-  apiToken:
-    creationOfLegacyTokenEnabled: false
-    tokenGenerationOnCreationEnabled: false
-    usageStatisticsEnabled: true
-  cps:
-    hideSandbox: false
-  gitHooks:
-    allowedOnAgents: false
-    allowedOnController: false
-  gitHostKeyVerificationConfiguration:
-    sshHostKeyVerificationStrategy: "knownHostsFileVerificationStrategy"
-  scriptApproval:
-    forceSandbox: false
+  security:
+    apiToken:
+      creationOfLegacyTokenEnabled: false
+      tokenGenerationOnCreationEnabled: false
+      usageStatisticsEnabled: true
+    cps:
+      hideSandbox: false
+    gitHooks:
+      allowedOnAgents: false
+      allowedOnController: false
+    gitHostKeyVerificationConfiguration:
+      sshHostKeyVerificationStrategy: "knownHostsFileVerificationStrategy"
+    scriptApproval:
+      forceSandbox: false
 
-unclassified:
-  buildDiscarders:
-    configuredBuildDiscarders:
-      - "jobBuildDiscarder"
-  fingerprints:
-    fingerprintCleanupDisabled: false
-    storage: "file"
-  location:
-    adminAddress: "address not configured yet <nobody@nowhere>"
-    url: "http://jenkins:8080/"
-  mailer:
-    charset: "UTF-8"
-    useSsl: false
-    useTls: false
-  pollSCM:
-    pollingThreadCount: 10
-  scmGit:
-    addGitTagAction: false
-    allowSecondFetch: false
-    createAccountBasedOnEmail: false
-    disableGitToolChooser: false
-    hideCredentials: false
-    showEntireCommitSummaryInChanges: false
-    useExistingAccountWithSameEmail: false
+  unclassified:
+    buildDiscarders:
+      configuredBuildDiscarders:
+        - "jobBuildDiscarder"
+    fingerprints:
+      fingerprintCleanupDisabled: false
+      storage: "file"
+    location:
+      adminAddress: "address not configured yet <nobody@nowhere>"
+      url: "http://jenkins:8080/"
+    mailer:
+      charset: "UTF-8"
+      useSsl: false
+      useTls: false
+    pollSCM:
+      pollingThreadCount: 10
+    scmGit:
+      addGitTagAction: false
+      allowSecondFetch: false
+      createAccountBasedOnEmail: false
+      disableGitToolChooser: false
+      hideCredentials: false
+      showEntireCommitSummaryInChanges: false
+      useExistingAccountWithSameEmail: false
 
-tool:
-  git:
-    installations:
-      - home: "git"
-        name: "Default"
-  mavenGlobalConfig:
-    globalSettingsProvider: "standard"
-    settingsProvider: "standard"
+  tool:
+    git:
+      installations:
+        - home: "git"
+          name: "Default"
+    mavenGlobalConfig:
+      globalSettingsProvider: "standard"
+      settingsProvider: "standard"
